--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,12 +1,16 @@
-<h2 class="title is-3"><%= @category.name.capitalize %></h2>
-<p class="content is-medium has-text-grey-darker">There are <%= @category.products.count %> product in this category.</p>
-<p class="content is-medium has-text-grey-darker">Product in <%= @category.name.capitalize %> are: </p>
+<h2 class="title is-3"><%= @products.name.capitalize %></h2>
+<p class="content is-medium has-text-grey-darker">There are <%= @products.count %> product in this category.</p>
+<p class="content is-medium has-text-grey-darker">Product in <%= @products.name.capitalize %> are: </p>
 
-<% if @category.products.empty? %>
+<div class="container pagination justify-content-center" >
+  <%= paginate @products, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm" %>
+</div>
+
+<% if @products.empty? %>
   <p> There are no products in this category</p>
 <% else%>
   <div class="row">
-    <% @category.products.each do |product|%>
+    <% @products.each do |product|%>
       <div class="col ">
     <div class="card border-light mb-3" >
       <img src="<%= product.image %>"  alt="Image not found" width="200" height="150" onerror="this.onerror=null;this.src='http://www.purpicks.com/wp-content/uploads/2018/03/lotus-cosmetics-usa-eye-shadow-palette-smokey.png';" />
@@ -18,6 +22,9 @@
     </div>
             </div>
       <% end %>
+</div>
+<div class="container pagination justify-content-center" >
+  <%= paginate @products, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm" %>
 </div>
 <% end %>
 
