--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 
           <%= link_to "Products", root_path, class: "nav-link"%>
           <%= link_to "Categories", categories_path, class: "nav-link"%>
-          <%= link_to "About", permalink_path('about_us'),class: "nav-link"%>
+          <%= link_to "About", about_path('about'),class: "nav-link"%>
+          <%= link_to "Contact", contact_path('contact'),class: "nav-link"%>
 
           <%= render partial: 'shared/search' %>
   </nav>
