--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
           <%= render partial: 'shared/search' %>
   </nav>
 
-
+      <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 
   <%= yield %>
 
