--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#CONTACT</h1>
-<p>CONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACT</p>
+<h1><%= @contact.title %></h1>
+<p><%= @contact.content %></p>
