--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,6 @@
 <% @order_details.each do |item| %>
   <h3> <%= item.product.name %></h3>
-  <h5> The price is $ <%= item.product.price %></h5>
-
-
-
+  <p> The unit price: $<%= item.product.price %></p>
     <%= form_for item, remote: true do |f| %>
 
         <%= f.hidden_field :product_id, :value => item.product.id %>
@@ -13,8 +10,22 @@
         <%= link_to "Remove Items", order_detail_path(item), method: :delete, remote: true%>
 
     <% end %>
-    <h2>Subtotal : <%= item.total %></h2>
+    <h4>Total: $<%= item.total %></h4>
 <% end %>
 
 
-<h3>Your current card value has a subtotal before tax of: $<%= current_order.subtotal %></h3>
+<h1>Order Summary</h1>
+<h5>Your current card value has a subtotal before tax of: $<%= current_order.subtotal %></h5>
+<% if current_order.order_hst.nil?  %>
+  <h5>Your GST Rate: $<%= current_order.order_gst %></h5>
+  <h5>Your PST Rate: $<%= current_order.order_pst %></h5>
+<% else %>
+  <h2>Your HST Rate: $<%= current_order.order_hst %></h2>
+<% end %>
+<h2>Your total : $<%= current_order.total %></h2>
+
+<h2>Shipping Address</h2>
+<h5>Name: <%= @user.name %></h5>
+<h5>Address: <%= @user.address %></h5>
+<h5>City: <%= @user.city %></h5>
+<h5>Postal Code: <%= @user.postal_code %></h5>
