--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <nav class="navbar navbar-light bg-light">
-          <%= link_to "Products", root_path, class: "nav-link"%>
+          <%= link_to "Home", root_path, class: "nav-link"%>
           <%= link_to "Categories", categories_path, class: "nav-link"%>
           <%= link_to "About", about_path,class: "nav-link"%>
           <%= link_to "Contact", contact_path,class: "nav-link"%>
